# rqt_quadcoptergui

./: .gitignore  CMakeLists.txt  abc  index.html  mainpage.dox  manifest.xml  package.xml  plugin.xml  save_pixhawkparams.bash  setup.py
cfg/: QuadcopterInterface.cfg  paramedit.cfg  paramedit.cfgc
doc/: manifest.yaml
docs/: QuadcopterInterfaceConfig-usage.dox  QuadcopterInterfaceConfig.dox  QuadcopterInterfaceConfig.wikidoc  SetptCtrlConfig-usage.dox  SetptCtrlConfig.dox  SetptCtrlConfig.wikidoc
launch/: camera_debayer.launch  cameratest.launch  dji_arm_onboard.launch  dji_duo_alvar.launch  dji_onboard.launch  dji_onboard_guidance.launch  dji_wp_manager.launch  pixhawkgui.launch  pixhawkgui_bare.launch  pixhawkgui_cam.launch  pixhawkgui_camwithvrpn.launch  pixhawkgui_joy_novrpn.launch  pixhawkgui_nojoy.launch  pixhawkgui_nojoy_novrpn.launch  pixhawkgui_remote.launch  pixhawkgui_serial_vrpn.launch  rqtgui.launch  simulator.launch  simulator_nojoy.launch
logfiles/: .my_script.m.swp  EvaluateTrajectory.m  PlotTrajectory.m  SDCardLog.m  Transferfunction.m  copy_script.m  ctrl_plot.m  ctrlr_datascript.m  generate_stimulus.m  generatesumofsineslogspaced.m  map_data.m  mapouttoin.m  matlab.mat  mount_SDCard.bash  my_script.m  my_script_completeanalysis.m  my_script_completeanalysis_z.m  (+6 more)
src/rqt_quadcoptergui/: .quadcoptergui.cpp.swp  CMakeLists.txt  Default.perspective  QUadcopterwidget.bak  QuadCopterwidget.ui  quadcoptergui.cpp  quadcoptergui.cpp.bak  quadcoptergui.h  quadcoptergui.h.bak
src/rqt_quadcoptergui/cfg/: QuadcopterInterfaceConfig.py  SetptCtrlConfig.py
(+178 files in other folders)
